--- a/JS_Identity/JS_Identity/Views/Shared/PV_CreateAccount.cshtml
+++ b/JS_Identity/JS_Identity/Views/Shared/PV_CreateAccount.cshtml
@@ -1,1 +1,19 @@
-﻿<span>Create!</span>
+﻿@using (Ajax.BeginForm("CreateAccount", "Home", new AjaxOptions
+{
+
+    UpdateTargetId = "login_field",
+    HttpMethod = "POST",
+    InsertionMode = InsertionMode.Replace
+}))
+
+{
+
+    <label for="filter">Name:</label>
+    <input type="text" class="form-control" id="name" name="name">
+
+
+    <label for="filter">Password:</label>
+    <input type="text" class="form-control" id="password" name="password">
+
+
+    <input type="submit" class="btn btn-default" value="Create">}
