--- a/JS_Identity/JS_Identity/Views/Shared/PV_Login.cshtml
+++ b/JS_Identity/JS_Identity/Views/Shared/PV_Login.cshtml
@@ -1,1 +1,22 @@
-﻿<span>Login!</span>
+﻿
+
+
+@using (Ajax.BeginForm("Login", "Home", new AjaxOptions
+{
+
+    UpdateTargetId = "login_field",
+    HttpMethod = "POST",
+    InsertionMode = InsertionMode.Replace
+}))
+
+{
+
+    <label for="filter">Name:</label>
+    <input type="text" class="form-control" id="name" name="name">
+
+
+    <label for="filter">Password:</label>
+    <input type="text" class="form-control" id="password" name="password">
+
+
+    <input type="submit" class="btn btn-default" value="Log In">}
