--- a/JS_Identity/JS_Identity/Views/Shared/PV_CreateAccount.cshtml
+++ b/JS_Identity/JS_Identity/Views/Shared/PV_CreateAccount.cshtml
@@ -1,4 +1,6 @@
-﻿@using (Ajax.BeginForm("CreateAccount", "Home", new AjaxOptions
+﻿@model string
+
+@using (Ajax.BeginForm("CreateAccount", "Home", new AjaxOptions
 {
 
     UpdateTargetId = "login_field",
@@ -13,7 +15,9 @@
 
 
     <label for="filter">Password:</label>
-    <input type="text" class="form-control" id="password" name="password">
+    <input type="password" class="form-control" id="password" name="password">
 
 
     <input type="submit" class="btn btn-default" value="Create">}
+
+    <span>@Model</span>
