--- a/JS_Identity/JS_Identity/Views/Shared/PV_Login.cshtml
+++ b/JS_Identity/JS_Identity/Views/Shared/PV_Login.cshtml
@@ -16,7 +16,7 @@
 
 
     <label for="filter">Password:</label>
-    <input type="text" class="form-control" id="password" name="password">
+    <input type="password" class="form-control" id="password" name="password">
 
 
     <input type="submit" class="btn btn-default" value="Log In">}
